Fix alignfull horizontal scrollbars

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI:          https: //github.com/WPSwitzerland/wordcampswitzerland-2023
 Author:             Say Hello GmbH
 Author URI:         https://sayhello.ch
 Description:        A WordPress Theme by Say Hello
-Version:            0.1.1
+Version:            0.1.2
 License:            GNU General Public License v3 or later
 License URI:        https://www.gnu.org/licenses/gpl.html
 Text Domain:        sht
@@ -22,6 +22,11 @@ Integration URL:    https://raw.githubusercontent.com/WPSwitzerland/wordcampswit
 
 .alignwide {
     max-width: 1278px !important;
+}
+
+body .wp-site-blocks .alignfull {
+    margin-left: calc(-0.5 * var(--wp--custom--spacing--outer)) !important;
+    margin-right: calc(-0.5 * var(--wp--custom--spacing--outer)) !important;
 }
 
 .c-header {
